--- a/index.html
+++ b/index.html
@@ -6,8 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookshelf</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/header.css" />
   </head>
-  <body>
+  <body class="body">
+    <header class="header">
+      <img class="header__logo" src="./images/logo.png" alt="logo" />
+      <div class="header__center">
+        <p class="header__title">Bookshelf</p>
+        <form class="header__search" action="">
+          <button type="submit"><i class="fas fa-search"></i></button>
+          <input type="text" placeholder="Search..." />
+        </form>
+      </div>
+      <div class="header__profile">
+        <button>
+          Jack Frost
+          <i class="fas fa-angle-down"></i>
+        </button>
+        <img src="./images/fotito.png" alt="fotito" />
+      </div>
+    </header>
+    <script
+      src="https://kit.fontawesome.com/04cea7dd63.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./javascript/script.js"></script>
   </body>
 </html>
