Se realizó estructura básica del contenido

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bookshelf</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="/css/section.css" />
   </head>
   <body class="body">
     <header class="header">
@@ -26,6 +27,95 @@
         <img src="./images/fotito.png" alt="fotito" />
       </div>
     </header>
+    <section class="section__principal">
+      <div class="div__left">
+        <h2 class="div__sub">MAIN</h2>
+        <ul>
+          <li><a href="">Quito</a></li>
+          <li><a href="">Cartagena</a></li>
+          <li><a href="">Medellín</a></li>
+          <li><a href="">Digital</a></li>
+          <li><a href="">Personal loads</a></li>
+          <li><a href="">New releases</a></li>
+        </ul>
+
+        <h2 class="div__sub">YOUR BOOKS</h2>
+        <ul>
+          <li><a href="">Readings</a></li>
+          <li><a href="">History</a></li>
+          <li><a href="">Read Later</a></li>
+          <li><a href="">Favorites</a></li>
+        </ul>
+      </div>
+      <section class="section__center">
+        <h2>New Releases</h2>
+        <div>
+          <img src="./images/lib1.png" alt="" />
+          <div></div>
+        </div>
+        <div>
+          <img src="./images/lib2.png" alt="" />
+          <div></div>
+        </div>
+        <div>
+          <img src="./images/lib3.png" alt="" />
+          <div></div>
+        </div>
+        <div>
+          <img src="./images/lib4.png" alt="" />
+          <div></div>
+        </div>
+        <div>
+          <img src="./images/lib5.png" alt="" />
+          <div></div>
+        </div>
+        <div>
+          <img src="./images/lib6.png" alt="" />
+          <div></div>
+        </div>
+        <div>
+          <img src="./images/lib7.png" alt="" />
+          <div></div>
+        </div>
+        <div>
+          <img src="./images/lib1.png" alt="" />
+          <div></div>
+        </div>
+        <div>
+          <img src="./images/lib5.png" alt="" />
+          <div></div>
+        </div>
+        <div>
+          <img src="./images/lib2.png" alt="" />
+          <div></div>
+        </div>
+        <div>
+          <img src="./images/lib4.png" alt="" />
+          <div></div>
+        </div>
+        <div>
+          <img src="./images/lib4.png" alt="" />
+          <div></div>
+        </div>
+      </section>
+      <div class="div__rigth">
+        <h2 class="div__rigth__sub">MOST READ BOOOKS</h2>
+        <ul>
+          <li><a href=""> 1.Hooked: How to Build Habit-Forming Products</a></li>
+          <li>
+            <a href="">
+              2.The Inevitable: Understanding the 12 Technological Forces That
+              Will Shape Our Future
+            </a>
+          </li>
+          <li><a href="">3.Lean In: Women, Work, and the Will to Lead</a></li>
+          <li>
+            <a href="">4.Building a Business When There Are No Easy Answers</a>
+          </li>
+          <li><a href="">5.How Google Works</a></li>
+        </ul>
+      </div>
+    </section>
     <script
       src="https://kit.fontawesome.com/04cea7dd63.js"
       crossorigin="anonymous"
