avances en el contenido principal

--- a/index.html
+++ b/index.html
@@ -48,54 +48,62 @@
         </ul>
       </div>
       <section class="section__center">
-        <h2>New Releases</h2>
-        <div>
-          <img src="./images/lib1.png" alt="" />
-          <div></div>
+        <div class="section__header">
+          <h2>New Releases</h2>
+          <a href="">Release Date</a>
+          <a href="">Popularity</a>
+          <button><i class="fas fa-th-large"></i></button>
+          <button><i class="fas fa-th-list"></i></button>
         </div>
-        <div>
-          <img src="./images/lib2.png" alt="" />
-          <div></div>
-        </div>
-        <div>
-          <img src="./images/lib3.png" alt="" />
-          <div></div>
-        </div>
-        <div>
-          <img src="./images/lib4.png" alt="" />
-          <div></div>
-        </div>
-        <div>
-          <img src="./images/lib5.png" alt="" />
-          <div></div>
-        </div>
-        <div>
-          <img src="./images/lib6.png" alt="" />
-          <div></div>
-        </div>
-        <div>
-          <img src="./images/lib7.png" alt="" />
-          <div></div>
-        </div>
-        <div>
-          <img src="./images/lib1.png" alt="" />
-          <div></div>
-        </div>
-        <div>
-          <img src="./images/lib5.png" alt="" />
-          <div></div>
-        </div>
-        <div>
-          <img src="./images/lib2.png" alt="" />
-          <div></div>
-        </div>
-        <div>
-          <img src="./images/lib4.png" alt="" />
-          <div></div>
-        </div>
-        <div>
-          <img src="./images/lib4.png" alt="" />
-          <div></div>
+        <div class="cards__container">
+          <article class="card">
+            <img src="./images/lib1.png" alt="" />
+            <h3>Everything I never Told You</h3>
+          </article>
+          <article class="card">
+            <img src="./images/lib2.png" alt="" />
+            <h3></h3>
+          </article>
+          <article class="card">
+            <img src="./images/lib3.png" alt="" />
+            <h3></h3>
+          </article>
+          <article class="card">
+            <img src="./images/lib4.png" alt="" />
+            <h3></h3>
+          </article>
+          <article class="card">
+            <img src="./images/lib5.png" alt="" />
+            <h3></h3>
+          </article>
+          <article class="card">
+            <img src="./images/lib6.png" alt="" />
+            <h3></h3>
+          </article>
+          <article class="card">
+            <img src="./images/lib7.png" alt="" />
+            <h3></h3>
+          </article>
+          <article class="card">
+            <img src="./images/lib1.png" alt="" />
+            <h3></h3>
+          </article>
+          <article class="card">
+            <img src="./images/lib5.png" alt="" />
+            <h3></h3>
+          </article>
+          <article class="card">
+            <img src="./images/lib2.png" alt="" />
+            <h3></h3>
+          </article>
+          <article class="card">
+            <img src="./images/lib4.png" alt="" />
+            <h3></h3>
+          </article>
+          <article class="card">
+            <img src="./images/lib4.png" alt="" />
+            <h3></h3>
+          </article>
         </div>
       </section>
       <div class="div__rigth">
