Finzalización de la página

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Bookshelf</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/header.css" />
-    <link rel="stylesheet" href="/css/section.css" />
+    <link rel="stylesheet" href="./css/section.css" />
+    <link rel="icon" type="image/ico" href="./images/favicon.ico" />
   </head>
   <body class="body">
     <header class="header">
@@ -31,83 +32,203 @@
       <div class="div__left">
         <h2 class="div__sub">MAIN</h2>
         <ul>
-          <li><a href="">Quito</a></li>
-          <li><a href="">Cartagena</a></li>
-          <li><a href="">Medellín</a></li>
-          <li><a href="">Digital</a></li>
-          <li><a href="">Personal loads</a></li>
-          <li><a href="">New releases</a></li>
+          <li>
+            <a href=""><i class="fas fa-map-marker-alt"></i>Quito</a>
+          </li>
+          <li>
+            <a href=""><i class="fas fa-map-marker-alt"></i>Cartagena</a>
+          </li>
+          <li>
+            <a href=""><i class="fas fa-map-marker-alt"></i>Medellín</a>
+          </li>
+          <li>
+            <a href=""><i class="fas fa-tablet-alt"></i>Digital</a>
+          </li>
+          <li>
+            <a href=""><i class="fas fa-user-tag"></i>Personal loads </a>
+          </li>
+          <li>
+            <a href=""><i class="fas fa-tag"></i>New releases</a>
+          </li>
         </ul>
 
         <h2 class="div__sub">YOUR BOOKS</h2>
         <ul>
-          <li><a href="">Readings</a></li>
-          <li><a href="">History</a></li>
-          <li><a href="">Read Later</a></li>
-          <li><a href="">Favorites</a></li>
+          <li>
+            <a href=""><i class="fas fa-book-open"></i>Readings</a>
+          </li>
+          <li>
+            <a href=""><i class="fas fa-history"></i>History</a>
+          </li>
+          <li>
+            <a href=""><i class="fas fa-bookmark"></i>Read Later</a>
+          </li>
+          <li>
+            <a href=""><i class="fas fa-heart"></i>Favorites</a>
+          </li>
         </ul>
       </div>
       <section class="section__center">
         <div class="section__header">
           <h2>New Releases</h2>
-          <a href="">Release Date</a>
-          <a href="">Popularity</a>
-          <button><i class="fas fa-th-large"></i></button>
-          <button><i class="fas fa-th-list"></i></button>
+          <div>
+            <a class="section__header__release" href="">Release Date</a>
+            <a href="">Popularity</a>
+          </div>
+          <div>
+            <button><i class="fas fa-th-list"></i></button>
+            <button><i class="fas fa-th-large"></i></button>
+          </div>
         </div>
         <div class="cards__container">
           <article class="card">
             <img src="./images/lib1.png" alt="" />
             <h3>Everything I never Told You</h3>
+            <p>Celeste Ng</p>
+            <div>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
           </article>
           <article class="card">
             <img src="./images/lib2.png" alt="" />
-            <h3></h3>
+            <h3>Everything I never Told You</h3>
+            <p>Celeste Ng</p>
+            <div>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
           </article>
           <article class="card">
             <img src="./images/lib3.png" alt="" />
-            <h3></h3>
+            <h3>Everything I never Told You</h3>
+            <p>Celeste Ng</p>
+            <div>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
           </article>
           <article class="card">
             <img src="./images/lib4.png" alt="" />
-            <h3></h3>
+            <h3>Everything I never Told You</h3>
+            <p>Celeste Ng</p>
+            <div>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
           </article>
           <article class="card">
             <img src="./images/lib5.png" alt="" />
-            <h3></h3>
+            <h3>Everything I never Told You</h3>
+            <p>Celeste Ng</p>
+            <div>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
           </article>
           <article class="card">
             <img src="./images/lib6.png" alt="" />
-            <h3></h3>
+            <h3>Everything I never Told You</h3>
+            <p>Celeste Ng</p>
+            <div>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
           </article>
           <article class="card">
             <img src="./images/lib7.png" alt="" />
-            <h3></h3>
+            <h3>Everything I never Told You</h3>
+            <p>Celeste Ng</p>
+            <div>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
           </article>
           <article class="card">
             <img src="./images/lib1.png" alt="" />
-            <h3></h3>
+            <h3>Everything I never Told You</h3>
+            <p>Celeste Ng</p>
+            <div>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
           </article>
           <article class="card">
             <img src="./images/lib5.png" alt="" />
-            <h3></h3>
+            <h3>Everything I never Told You</h3>
+            <p>Celeste Ng</p>
+            <div>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
           </article>
           <article class="card">
             <img src="./images/lib2.png" alt="" />
-            <h3></h3>
+            <h3>Everything I never Told You</h3>
+            <p>Celeste Ng</p>
+            <div>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
           </article>
           <article class="card">
             <img src="./images/lib4.png" alt="" />
-            <h3></h3>
+            <h3>Everything I never Told You</h3>
+            <p>Celeste Ng</p>
+            <div>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
           </article>
           <article class="card">
             <img src="./images/lib4.png" alt="" />
-            <h3></h3>
+            <h3>Everything I never Told You</h3>
+            <p>Celeste Ng</p>
+            <div>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
           </article>
         </div>
       </section>
       <div class="div__rigth">
-        <h2 class="div__rigth__sub">MOST READ BOOOKS</h2>
+        <h2 class="div__rigth__sub">MOST READ BOOKS</h2>
         <ul>
           <li><a href=""> 1.Hooked: How to Build Habit-Forming Products</a></li>
           <li>
